# dgt_parser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  functions.rs  main.rs  tmx_parser.rs  types.rs
src/handlers/: mod.rs  postgres.rs  sql.rs  sqlite_db.rs
test_data/: 22019A0315(01).tmx
test_data/test_dgt_docs/: 22019D0391.tmx  22019D0437.tmx  22019D0438.tmx  22019D0556.tmx  22019D0557.tmx  22019D0558.tmx  22019D0559.tmx  22019D0710.tmx  22019D0920.tmx  22019D0940.tmx  22019D0996.tmx  22019D1035.tmx  22019D1186.tmx  22019D1343.tmx  22019D1356.tmx  22019D1357.tmx  22019D1358.tmx  22019D1359.tmx  22019D1360.tmx  22019D1361.tmx  22019D1362.tmx  22019D1363.tmx  22019D1364.tmx  22019D1365.tmx  22019D1366.tmx  22019D1367.tmx  22019D1368.tmx  22019D1369.tmx  22019D1370.tmx  22019D1371.tmx  22019D1380.tmx  22019D1400.tmx  22019D1401.tmx  22019D1402.tmx
tests/: sqlite_db.rs
