[package]
authors = ["Paweł Malinowski <p@malinowski.pm>"]
edition = "2021"
name = "dgt_parser"
version = "0.1.0"

[dependencies]
anyhow = "1.0.66"
clap = {version = "4.0.18", features = ["derive"]}
encoding_rs = "0.8.31"
quick-xml = {version = "0.26", features = ["serialize"]}
regex = "1"
rusqlite = {version = "0.28", features = ["bundled"]}
serde = {version = "1.0", features = ["derive"]}
zip = "0.6.3"

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.8"